# tutorial_latex_formatting

./: README.md  pyproject.toml  tutorial_main.tex
tables/: table_gradient.csv  table_plain.csv  write_csv_file.ipynb
